force-app/main/default/objects/Termination_Detail__c/Termination_Detail__c.object-meta.xml
<CustomObject>
    <label>Termination Detail</label>
    <nameField>
        <displayFormat>TD-{0000000000}</displayFormat>
        <label>Termination Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Termination Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>