force-app/main/default/objects/Termination_Detail__c/fields/Residual_Rate__c.field-meta.xml
<CustomField>
    <fullName>Residual_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Residual Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>