force-app/main/default/objects/Termination_Detail__c/fields/Termination_Bill_Unpaid__c.field-meta.xml
<CustomField>
    <fullName>Termination_Bill_Unpaid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Termination-Bill-Unpaid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>