force-app/main/default/objects/Termination_Detail__c/fields/Termination_Fee_Unpaid__c.field-meta.xml
<CustomField>
    <fullName>Termination_Fee_Unpaid__c</fullName>
    <label>Termination-Fee-Unpaid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>