force-app/main/default/objects/Termination_Detail__c/fields/Termination_Future_Rent__c.field-meta.xml
<CustomField>
    <fullName>Termination_Future_Rent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Termination-Future Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>