force-app/main/default/objects/Termination_Detail__c/fields/Termination_IDC_Expense__c.field-meta.xml
<CustomField>
    <fullName>Termination_IDC_Expense__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Termination-IDC Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>