force-app/main/default/objects/Termination_Detail__c/fields/Termination_Quote__c.field-meta.xml
<CustomField>
    <fullName>Termination_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Termination Quote</label>
    <referenceTo>cllease__Termination_Quote_Header__c</referenceTo>
    <relationshipLabel>Termination Details</relationshipLabel>
    <relationshipName>Termination_Details</relationshipName>
    <type>Lookup</type>
</CustomField>