force-app/main/default/objects/Termination_Detail__c/fields/Termination_Unearned_Income__c.field-meta.xml
<CustomField>
    <fullName>Termination_Unearned_Income__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Termination-Unearned Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>